<resources>
    <string name="app_name">WeatherActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="welcome_to_my_app">Welcome to my app!</string>
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="sub_item_2">Sub item 2</string>
    <string name="sub_item_1">Sub item 1</string>
    <string name="sub_items">Sub items</string>
    <string name="today_weather">Today Weather</string>
    <string name="forecast_weather">Forecast Weather</string>
    <string name="login">LOGIN</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="login_user">Login User</string>
    <string name="logout">logout</string>
    <string name="city">City:</string>
    <string name="enter_the_city">Enter the City</string>
    <string name="search">Search</string>
</resources>