<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/settingFragment"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />
    </group>

    <item android:title="@string/sub_items">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/ic_setting"
                    android:title="@string/sub_item_1" />
                <item
                    android:icon="@drawable/ic_profile"
                    android:title="@string/sub_item_2" />
            </group>
        </menu>
    </item>

</menu>