<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_huge"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_4x"
        android:background="@drawable/login_input_shape"
        android:hint="@string/enter_your_username"
        android:padding="@dimen/margin_4x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_4x"
        android:background="@drawable/login_input_shape"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="@dimen/margin_4x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_username" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16x"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="@dimen/margin_16x"
        android:background="@drawable/button_shape"
        android:padding="@dimen/margin_4x"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_huge"
        app:layout_constraintTop_toBottomOf="@id/edittext_password" />


</androidx.constraintlayout.widget.ConstraintLayout>